# blender-transfer-animation

./: LICENSE  README.md  pyproject.toml  requirements.txt  transfer_animation.py
.github/: copilot-instructions.md
